--- a/fmadmin/common/uni.css
+++ b/fmadmin/common/uni.css
@@ -1,5 +1,11 @@
-/* 全局公共样式 */
+/* 自定义全局样式 */
+text,
+view {
+	font-size: 14px;
+	color: #333;
+}
 
+/* 全局公共样式 */
 body,
 html {
 	-webkit-user-select: auto;
@@ -14,8 +20,8 @@ html {
 	background-color: #f5f5f5;
 }
 
-.uni-mask + .uni-left-window,
-.uni-mask + .uni-right-window {
+.uni-mask+.uni-left-window,
+.uni-mask+.uni-right-window {
 	position: fixed;
 }
 
@@ -28,14 +34,12 @@ uni-page-head .uni-btn-icon {
 	color: #333 !important;
 }
 
-.uni-app--showleftwindow
-	uni-page-head[uni-page-head-type="default"]
-	~ uni-page-wrapper {
+.uni-app--showleftwindow uni-page-head[uni-page-head-type="default"]~uni-page-wrapper {
 	height: auto;
 	padding-top: 44px;
 }
 
-.uni-app--showleftwindow uni-page-head ~ uni-page-wrapper uni-page-body {
+.uni-app--showleftwindow uni-page-head~uni-page-wrapper uni-page-body {
 	/* padding-top: 44px; */
 }
 
@@ -157,7 +161,7 @@ uni-page-head .uni-btn-icon {
 	margin: 10px;
 }
 
-.uni-group > .uni-button:first-child {
+.uni-group>.uni-button:first-child {
 	margin-left: 0;
 }
 
@@ -581,7 +585,7 @@ button:after {
 		margin: 0 86px;
 	}
 
-	::v-deep .uni-pagination-picker-show .uni-picker-container .uni-picker-custom .uni-picker-select + div {
+	::v-deep .uni-pagination-picker-show .uni-picker-container .uni-picker-custom .uni-picker-select+div {
 		left: 50% !important;
 	}
 }
@@ -594,9 +598,11 @@ button:after {
 	min-height: calc(100vh - 237px);
 	box-sizing: border-box;
 }
+
 ::v-deep .uni-table .tr-table--border {
 	border-left: 1px #ebeef5 solid;
 }
+
 /* #endif */
 
 /* #ifdef H5 */
@@ -605,13 +611,16 @@ button:after {
 	min-height: calc(100vh - 237px);
 	box-sizing: border-box;
 }
+
 ::v-deep .uni-table .tr-table--border {
 	border-left: 1px #ebeef5 solid;
 }
+
 /* #endif */
 
 /* #ifndef H5 */
 .fix-top-window {
 	margin-top: 85px;
 }
+
 /* #endif */
