--- a/stadmin/common/st.css
+++ b/stadmin/common/st.css
@@ -1,5 +1,6 @@
 /* 自定义全局样式 */
 .st-box {
+	flex: 1;
 	border-radius: 4px;
 	box-shadow: -1px -1px 5px 0 rgba(0, 0, 0, 0.1);
 	margin-bottom: 15px;
@@ -17,3 +18,7 @@
 	padding-left: 10px;
 	border-left: 4px solid #00CC99;
 }
+
+	::v-deep .is-disabled {
+		color: black !important;
+	}
