--- a/stadmin/common/uni.css
+++ b/stadmin/common/uni.css
@@ -61,7 +61,7 @@ uni-page-head .uni-btn-icon {
 
 .uni-app--showleftwindow .uni-container .uni-forms {
 	padding: 15px;
-	max-width: 650px;
+	/* max-width: 650px; */
 }
 
 /* #endif */
